--- a/index.html
+++ b/index.html
@@ -1,75 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>ShareBnB</title>
-		<link
-			href="https://fonts.googleapis.com/css2?family=Inter:wght@400&display=swap"
-			rel="stylesheet"
-		/>
-		<style>
-			body {
-				font-family: "Inter", sans-serif;
-			}
-			#paris {
-				font-weight: 400;
-				font-size: 50px;
-				position: absolute;
-				top: 80px;
-				left: 1000px;
-			}
-			#inhabitants {
-				font-weight: 400;
-				font-size: 30px;
-				position: absolute;
-				top: 140px; /* 80px (top of #paris) + 50px (height of #paris) + 10px (desired gap) */
-				left: 1000px;
-			}
-		</style>
-	</head>
-	<body>
-		<div id="paris">Paris</div>
-		<div id="inhabitants"></div>
-		<script>
-			fetch("data/population.csv")
-				.then((response) => {
-					if (!response.ok) {
-						throw new Error(
-							"Network response was not ok " + response.statusText
-						);
-					}
-					return response.text();
-				})
-				.then((data) => {
-					const lines = data.split("\n");
-					const cityData = lines.find((line) =>
-						line.startsWith("Paris")
-					);
-					if (cityData) {
-						const inhabitants = cityData.split(",")[1];
-						document.getElementById(
-							"inhabitants"
-						).textContent = `${inhabitants} inhabitants`;
-					}
-				})
-				.catch((error) =>
-					console.error("Error fetching the CSV file:", error)
-				);
-		</script>
-	</body>
-</html>
-
-<div id="content">
-	<h1>Total Number of Airbnb Listings in Istanbul</h1>
-    <p id="total"></p>
+<div id="mySidenav" class="sidenav">
+	<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
+	<a href="#">Home</a>
+	<a href="#">About</a>
+	<a href="#">Contact</a>
 </div>
-<script src="https://d3js.org/d3.v7.min.js"></script>
-<script>
-    d3.csv("data/airbnb_listings.csv").then(function(data) {
-        const istanbulListings = data.filter(d => d.city === "Istanbul");
-        document.getElementById("total").textContent = `Total: ${istanbulListings.length} listings`;
-    }).catch(function(error) {
-        console.error("Error fetching the CSV file:", error);
-    });
-</script>
+
+<span onclick="openNav()">Open Menu</span>
+
+<div id="main">
+	<!-- Main content goes here -->
+</div>
