--- a/index.html
+++ b/index.html
@@ -3,97 +3,31 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Sharebnb</title>
-		<style>
-			body {
-				font-family: "Lato", sans-serif;
-			}
-
-			.sidenav {
-				height: 100%;
-				width: 0;
-				position: fixed;
-				z-index: 1;
-				top: 0;
-				left: 0;
-				background-color: #111;
-				overflow-x: hidden;
-				transition: 0.5s;
-				padding-top: 60px;
-			}
-
-			.sidenav a {
-				padding: 8px 8px 8px 32px;
-				text-decoration: none;
-				font-size: 25px;
-				color: #818181;
-				display: block;
-				transition: 0.3s;
-			}
-
-			.sidenav a:hover {
-				color: #f1f1f1;
-			}
-
-			.sidenav .closebtn {
-				position: absolute;
-				top: 0;
-				right: 25px;
-				font-size: 36px;
-				margin-left: 50px;
-			}
-
-			#main {
-				transition: margin-left 0.5s;
-				padding: 16px;
-			}
-
-			.container {
-				margin-top: 20px;
-			}
-
-			.city {
-				margin: 10px 0;
-			}
-		</style>
+		<title>Colorful Tab Menu</title>
+		<link rel="stylesheet" href="styles.css" />
 	</head>
 	<body>
-		<div id="mySidenav" class="sidenav">
-			<a href="#">Section 1</a>
-			<a href="#">Section 2</a>
-			<a href="#">Section 3</a>
-			<a href="#">Section 4</a>
-			<a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
-				>×</a
-			>
+		<div class="tab-menu">
+			<div class="tab" onclick="openTab('food')">Food</div>
+			<div class="tab" onclick="openTab('retail')">Retail</div>
+			<div class="tab" onclick="openTab('community')">Community</div>
 		</div>
 
-		<span onclick="openNav()">Open Menu</span>
-
-		<div id="main">
-			<!-- Main content here -->
+		<div id="food" class="tab-content">
+			<h2>Food Section</h2>
+			<p>Details about food offerings.</p>
 		</div>
 
-		<div class="container">
-			<div class="city">New York</div>
-			<div class="city">Rio de Janeiro</div>
-			<div class="city">Kapstadt</div>
-			<div class="city">Sydney</div>
-			<div class="city">Tokio</div>
-			<div class="city">Paris</div>
-			<div class="city">Istanbul</div>
+		<div id="retail" class="tab-content">
+			<h2>Retail Section</h2>
+			<p>Details about retail offerings.</p>
 		</div>
 
-		<script>
-			function openNav() {
-				document.getElementById("mySidenav").style.width = "250px";
-				document.getElementById("main").style.marginLeft = "250px";
-			}
+		<div id="community" class="tab-content">
+			<h2>Community Section</h2>
+			<p>Details about community events.</p>
+		</div>
 
-			function closeNav() {
-				document.getElementById("mySidenav").style.width = "0";
-				document.getElementById("main").style.marginLeft = "0";
-			}
-		</script>
+		<script src="script.js"></script>
 	</body>
 </html>
