Refactor index.html to update page structure and content

--- a/index.html
+++ b/index.html
@@ -1,33 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Colorful Tab Menu</title>
-		<link rel="stylesheet" href="styles.css" />
-	</head>
-	<body>
-		<div class="tab-menu">
-			<div class="tab" onclick="openTab('food')">Food</div>
-			<div class="tab" onclick="openTab('retail')">Retail</div>
-			<div class="tab" onclick="openTab('community')">Community</div>
-		</div>
-
-		<div id="food" class="tab-content">
-			<h2>Food Section</h2>
-			<p>Details about food offerings.</p>
-		</div>
-
-		<div id="retail" class="tab-content">
-			<h2>Retail Section</h2>
-			<p>Details about retail offerings.</p>
-		</div>
-
-		<div id="community" class="tab-content">
-			<h2>Community Section</h2>
-			<p>Details about community events.</p>
-		</div>
-
-		<script src="script.js"></script>
-	</body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ShareBnB</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>Welcome to ShareBnB</h1>
+    </header>
+    <main>
+        <p>Your go-to platform for sharing and booking unique accommodations.</p>
+    </main>
+    <footer>
+        <p>&copy; 2023 ShareBnB. All rights reserved.</p>
+    </footer>
+</body>
 </html>
