Refactor styles.css to use Inter font and update body, headings, paragraphs, and links styles

--- a/index.html
+++ b/index.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ShareBnB</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <header>
-        <h1>Welcome to ShareBnB</h1>
-    </header>
-    <main>
-        <p>Your go-to platform for sharing and booking unique accommodations.</p>
-    </main>
-    <footer>
-        <p>&copy; 2023 ShareBnB. All rights reserved.</p>
-    </footer>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>ShareBnB</title>
+		<link rel="stylesheet" href="css/styles.css" />
+	</head>
+	<body>
+		<header>
+			<h1>Welcome to ShareBnB</h1>
+		</header>
+		<main>
+			<section>
+				<h2>Featured Listings</h2>
+				<!-- Content goes here -->
+			</section>
+		</main>
+		<footer>
+			<p>&copy; 2023 ShareBnB. All rights reserved.</p>
+		</footer>
+	</body>
 </html>
