Refactor CSS styles to update container layout and tab functionality

--- a/index.html
+++ b/index.html
@@ -14,8 +14,27 @@
 			<section>
 				<h2>Featured Listings</h2>
 				<!-- Content goes here -->
+		
+				<div class="container">
+					<input type="radio" name="tabs" id="tab_1" checked>
+					<label for="tab_1">
+						<div class="content">Hello, I'm 1</div>
+					</label>
+					<input type="radio" name="tabs" id="tab_2">
+					<label for="tab_2">
+						<div class="content">Hello, I'm 2</div>
+					</label>
+					<input type="radio" name="tabs" id="tab_3">
+					<label for="tab_3">
+						<div class="content">Hello, I'm 3</div>
+					</label>
+					<input type="radio" name="tabs" id="tab_4">
+					<label for="tab_4">
+						<div class="content">Hello, I'm 4</div>
+					</label>
+				</div>
 			</section>
-		</main>
+		</main>		
 		<footer>
 			<p>&copy; 2023 ShareBnB. All rights reserved.</p>
 		</footer>
