--- a/index.html
+++ b/index.html
@@ -13,28 +13,40 @@
 		<main>
 			<section>
 				<h2>Featured Listings</h2>
-				<!-- Content goes here -->
-		
+				<!-- Tabs Section -->
 				<div class="container">
 					<input type="radio" name="tabs" id="tab_1" checked>
 					<label for="tab_1">
-						<div class="content">Hello, I'm 1</div>
+						<div class="content">Hello, I'm Tab 1</div>
 					</label>
 					<input type="radio" name="tabs" id="tab_2">
 					<label for="tab_2">
-						<div class="content">Hello, I'm 2</div>
+						<div class="content">Hello, I'm Tab 2</div>
 					</label>
 					<input type="radio" name="tabs" id="tab_3">
 					<label for="tab_3">
-						<div class="content">Hello, I'm 3</div>
+						<div class="content">Hello, I'm Tab 3</div>
 					</label>
 					<input type="radio" name="tabs" id="tab_4">
 					<label for="tab_4">
-						<div class="content">Hello, I'm 4</div>
+						<div class="content">Hello, I'm Tab 4</div>
+					</label>
+					<input type="radio" name="tabs" id="tab_5">
+					<label for="tab_5">
+						<div class="content">Hello, I'm Tab 5</div>
+					</label>
+					<input type="radio" name="tabs" id="tab_6">
+					<label for="tab_6">
+						<div class="content">Hello, I'm Tab 6</div>
+					</label>
+					<input type="radio" name="tabs" id="tab_7">
+					<label for="tab_7">
+						<div class="content">Hello, I'm Tab 7</div>
 					</label>
 				</div>
 			</section>
-		</main>		
+		</main>
+		
 		<footer>
 			<p>&copy; 2023 ShareBnB. All rights reserved.</p>
 		</footer>
