Working copy, counting numbers

--- a/index2.html
+++ b/index2.html
@@ -3,27 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Basic HTML Page</title>
-    <style>
-        body {
-            font-family: 'Inter', sans-serif;
-            display: flex;
-            justify-content: flex-start;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-        }
-        .numbers {
-            font-size: 5rem;
-            margin-left: 20px;
-        }
-    </style>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+    <title>Airbnb Listings</title>
 </head>
 <body>
-    <div class="numbers" id="results">
-        <!-- Results will be inserted here by script2.js -->
-    </div>
-    <script src="script2.js"></script>
+    <h1>Total number of "id": <span id="total-ids">Loading...</span></h1>
+    <script src="js/script2.js"></script>
 </body>
 </html>
