--- a/index2.html
+++ b/index2.html
@@ -6,7 +6,7 @@
     <title>Airbnb Listings</title>
 </head>
 <body>
-    <h1>Total number of "id": <span id="total-ids">Loading...</span></h1>
+    <h1>Total number of Airbnbs in Cape Town: <span id="total-ids">Loading...</span></h1>
     <script src="js/script2.js"></script>
 </body>
 </html>
