Update heading to display total number of Airbnbs in multiple cities

--- a/index2.html
+++ b/index2.html
@@ -6,7 +6,13 @@
     <title>Airbnb Listings</title>
 </head>
 <body>
-    <h1>Total number of Airbnbs in Cape Town: <span id="total-ids">Loading...</span></h1>
+    <h1>Total number of Airbnbs in Cape Town: <span id="total-ids-cape-town">Loading...</span></h1>
+    <h1>Total number of Airbnbs in Paris: <span id="total-ids-paris">Loading...</span></h1>
+    <h1>Total number of Airbnbs in Tokyo: <span id="total-ids-tokyo">Loading...</span></h1>
+    <h1>Total number of Airbnbs in New York: <span id="total-ids-new-york">Loading...</span></h1>
+    <h1>Total number of Airbnbs in Rio De Janeiro: <span id="total-ids-riodejaneiro">Loading...</span></h1>
+    <h1>Total number of Airbnbs in Sydney: <span id="total-ids-sydney">Loading...</span></h1>
+    <h1>Total number of Airbnbs in Istanbul: <span id="total-ids-istanbul">Loading...</span></h1>
     <script src="js/script2.js"></script>
 </body>
 </html>
