--- a/index2.html
+++ b/index2.html
@@ -4,15 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Airbnb Listings</title>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Inter', sans-serif;
+        }
+        h1 {
+            font-weight: 700;
+        }
+        .city-name {
+            font-weight: bold;
+            text-transform: uppercase;
+        }
+    </style>
 </head>
 <body>
-    <h1>Total number of Airbnbs in Cape Town: <span id="total-ids-cape-town">Loading...</span></h1>
-    <h1>Total number of Airbnbs in Paris: <span id="total-ids-paris">Loading...</span></h1>
-    <h1>Total number of Airbnbs in Tokyo: <span id="total-ids-tokyo">Loading...</span></h1>
-    <h1>Total number of Airbnbs in New York: <span id="total-ids-new-york">Loading...</span></h1>
-    <h1>Total number of Airbnbs in Rio De Janeiro: <span id="total-ids-riodejaneiro">Loading...</span></h1>
-    <h1>Total number of Airbnbs in Sydney: <span id="total-ids-sydney">Loading...</span></h1>
-    <h1>Total number of Airbnbs in Istanbul: <span id="total-ids-istanbul">Loading...</span></h1>
+    <h1>N° <span class="city-name">Cape Town</span>: <span id="total-ids-cape-town">Loading...</span></h1>
+    <h1>N° <span class="city-name">Paris</span>: <span id="total-ids-paris">Loading...</span></h1>
+    <h1>N° <span class="city-name">Tokyo</span>: <span id="total-ids-tokyo">Loading...</span></h1>
+    <h1>N° <span class="city-name">New York</span>: <span id="total-ids-new-york">Loading...</span></h1>
+    <h1>N° <span class="city-name">Rio De Janeiro</span>: <span id="total-ids-riodejaneiro">Loading...</span></h1>
+    <h1>N° <span class="city-name">Sydney</span>: <span id="total-ids-sydney">Loading...</span></h1>
+    <h1>N° <span class="city-name">Istanbul</span>: <span id="total-ids-istanbul">Loading...</span></h1>
     <script src="js/script2.js"></script>
 </body>
 </html>
