Refactor CSS styles to update container layout and tab functionality

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<header>
-			<h1>Welcome to ShareBnB</h1>
+			<!-- <h1>Welcome to ShareBnB</h1> -->
 		</header>
 		<main>
 			<section>
@@ -17,7 +17,7 @@
 				<div class="container">
 					
 					<label for="tab_1">
-						<div class="content">HOME</div>
+						<div class="content">ShareBnB</div>
 					</label>
 					<label for="tab_2">
 						<div class="content">NEW YORK CITY</div>
@@ -51,7 +51,7 @@
 		</main>
 		
 		<footer>
-			<p>&copy; 2023 ShareBnB. All rights reserved.</p>
+		<!-- 	<p>&copy; 2023 ShareBnB. All rights reserved.</p> -->
 		</footer>
 	</body>
 </html>
