Refactor CSS styles to update container layout and tab functionality

--- a/index.html
+++ b/index.html
@@ -12,12 +12,17 @@
 		</header>
 		<main>
 			<section>
-				<h2>Featured Listings</h2>
+				<!--<h2>Featured Listings</h2> -->
 				<!-- Tabs Section -->
 				<div class="container">
 					
 					<label for="tab_1">
 						<div class="content">ShareBnB</div>
+						<style>
+							.content {
+								color: black;
+							}
+						</style>
 					</label>
 					<label for="tab_2">
 						<div class="content">NEW YORK CITY</div>
