--- a/index2.html
+++ b/index2.html
@@ -28,6 +28,7 @@
 		</h1>
 		<h2>Inhabitants: <span id="population-cape-town">Loading...</span></h2>
 		<h2>Tourists: <span id="tourists-cape-town">Loading...</span></h2>
+		<h2>Apartments: <span id="apartments-cape-town">Loading...</span></h2>
 
 		<h1>
 			N° <span class="city-name">Paris</span>:
@@ -35,6 +36,7 @@
 		</h1>
 		<h2>Inhabitants: <span id="population-paris">Loading...</span></h2>
 		<h2>Tourists: <span id="tourists-paris">Loading...</span></h2>
+		<h2>Apartments: <span id="apartments-paris">Loading...</span></h2>
 
 		<h1>
 			N° <span class="city-name">Tokyo</span>:
@@ -42,6 +44,7 @@
 		</h1>
 		<h2>Inhabitants: <span id="population-tokyo">Loading...</span></h2>
 		<h2>Tourists: <span id="tourists-tokyo">Loading...</span></h2>
+		<h2>Apartments: <span id="apartments-tokyo">Loading...</span></h2>
 
 		<h1>
 			N° <span class="city-name">New York</span>:
@@ -49,6 +52,7 @@
 		</h1>
 		<h2>Inhabitants: <span id="population-new-york">Loading...</span></h2>
 		<h2>Tourists: <span id="tourists-new-york">Loading...</span></h2>
+		<h2>Apartments: <span id="apartments-new-york">Loading...</span></h2>
 
 		<h1>
 			N° <span class="city-name">Rio De Janeiro</span>:
@@ -56,6 +60,7 @@
 		</h1>
 		<h2>Inhabitants: <span id="population-rio">Loading...</span></h2>
 		<h2>Tourists: <span id="tourists-rio">Loading...</span></h2>
+		<h2>Apartments: <span id="apartments-rio">Loading...</span></h2>
 
 		<h1>
 			N° <span class="city-name">Sydney</span>:
@@ -63,6 +68,7 @@
 		</h1>
 		<h2>Inhabitants: <span id="population-sydney">Loading...</span></h2>
 		<h2>Tourists: <span id="tourists-sydney">Loading...</span></h2>
+		<h2>Apartments: <span id="apartments-sydney">Loading...</span></h2>
 
 		<h1>
 			N° <span class="city-name">Istanbul</span>:
@@ -70,6 +76,7 @@
 		</h1>
 		<h2>Inhabitants: <span id="population-istanbul">Loading...</span></h2>
 		<h2>Tourists: <span id="tourists-istanbul">Loading...</span></h2>
+		<h2>Apartments: <span id="apartments-istanbul">Loading...</span></h2>
 
 		<script type="module" src="js/script2.js"></script>
 	</body>
