WORKING: Refactor CSS styles to update container layout and tab functionality

--- a/index2.html
+++ b/index2.html
@@ -29,6 +29,7 @@
 		<h2>Inhabitants: <span id="population-cape-town">Loading...</span></h2>
 		<h2>Tourists: <span id="tourists-cape-town">Loading...</span></h2>
 		<h2>Apartments: <span id="apartments-cape-town">Loading...</span></h2>
+		<h2>Airbnb Index: <span id="airbnb-index-cape-town">Loading...</span></h2>
 
 		<h1>
 			N° <span class="city-name">Paris</span>:
@@ -37,6 +38,7 @@
 		<h2>Inhabitants: <span id="population-paris">Loading...</span></h2>
 		<h2>Tourists: <span id="tourists-paris">Loading...</span></h2>
 		<h2>Apartments: <span id="apartments-paris">Loading...</span></h2>
+		<h2>Airbnb Index: <span id="airbnb-index-paris">Loading...</span></h2>
 
 		<h1>
 			N° <span class="city-name">Tokyo</span>:
@@ -45,6 +47,7 @@
 		<h2>Inhabitants: <span id="population-tokyo">Loading...</span></h2>
 		<h2>Tourists: <span id="tourists-tokyo">Loading...</span></h2>
 		<h2>Apartments: <span id="apartments-tokyo">Loading...</span></h2>
+		<h2>Airbnb Index: <span id="airbnb-index-tokyo">Loading...</span></h2>
 
 		<h1>
 			N° <span class="city-name">New York</span>:
@@ -53,6 +56,7 @@
 		<h2>Inhabitants: <span id="population-new-york">Loading...</span></h2>
 		<h2>Tourists: <span id="tourists-new-york">Loading...</span></h2>
 		<h2>Apartments: <span id="apartments-new-york">Loading...</span></h2>
+		<h2>Airbnb Index: <span id="airbnb-index-new-york">Loading...</span></h2>
 
 		<h1>
 			N° <span class="city-name">Rio De Janeiro</span>:
@@ -61,6 +65,7 @@
 		<h2>Inhabitants: <span id="population-rio">Loading...</span></h2>
 		<h2>Tourists: <span id="tourists-rio">Loading...</span></h2>
 		<h2>Apartments: <span id="apartments-rio">Loading...</span></h2>
+		<h2>Airbnb Index: <span id="airbnb-index-rio">Loading...</span></h2>
 
 		<h1>
 			N° <span class="city-name">Sydney</span>:
@@ -69,6 +74,7 @@
 		<h2>Inhabitants: <span id="population-sydney">Loading...</span></h2>
 		<h2>Tourists: <span id="tourists-sydney">Loading...</span></h2>
 		<h2>Apartments: <span id="apartments-sydney">Loading...</span></h2>
+		<h2>Airbnb Index: <span id="airbnb-index-sydney">Loading...</span></h2>
 
 		<h1>
 			N° <span class="city-name">Istanbul</span>:
@@ -77,6 +83,7 @@
 		<h2>Inhabitants: <span id="population-istanbul">Loading...</span></h2>
 		<h2>Tourists: <span id="tourists-istanbul">Loading...</span></h2>
 		<h2>Apartments: <span id="apartments-istanbul">Loading...</span></h2>
+		<h2>Airbnb Index: <span id="airbnb-index-istanbul">Loading...</span></h2>
 
 		<script type="module" src="js/script2.js"></script>
 	</body>
