Refactor city information display in index2.html

--- a/index2.html
+++ b/index2.html
@@ -23,92 +23,69 @@
 	</head>
 	<body>
 		<h1>
-			N° <span class="city-name">Cape Town</span>:
+			N° <span class="city-name">Cape Town</span>
 			<span id="total-ids-cape-town">Loading...</span>
 		</h1>
-		<div class="city-info">
-			<h3>Inhabitants: <span id="population-cape-town">Loading...</span></h3>
-			<h3>Tourists: <span id="tourists-cape-town">Loading...</span></h3>
-			<h3>Apartments: <span id="apartments-cape-town">Loading...</span></h3>
-			<h3>Airbnb Index: <span id="airbnb-index-cape-town">Loading...</span></h3>
-		</div>
+		<h3><span id="population-cape-town">Loading...</span></h3>
+		<h3><span id="tourists-cape-town">Loading...</span></h3>
+		<h3><span id="apartments-cape-town">Loading...</span></h3>
+		<h3><span id="airbnb-index-cape-town">Loading...</span></h3>
 
+		<h1></h1>
 		<h1>
-			N° <span class="city-name">Paris</span>:
+			N° <span class="city-name">Paris</span>
 			<span id="total-ids-paris">Loading...</span>
 		</h1>
-		<div class="city-info">
-			<h3>Inhabitants: <span id="population-paris">Loading...</span></h3>
-			<h3>Tourists: <span id="tourists-paris">Loading...</span></h3>
-			<h3>Apartments: <span id="apartments-paris">Loading...</span></h3>
-			<h3>Airbnb Index: <span id="airbnb-index-paris">Loading...</span></h3>
-		</div>
+		<h3><span id="population-paris">Loading...</span></h3>
+		<h3><span id="tourists-paris">Loading...</span></h3>
+		<h3><span id="apartments-paris">Loading...</span></h3>
+		<h3><span id="airbnb-index-paris">Loading...</span></h3>
 
 		<h1>
-			N° <span class="city-name">Tokyo</span>:
+			N° <span class="city-name">Tokyo</span>
 			<span id="total-ids-tokyo">Loading...</span>
 		</h1>
-		<div class="city-info">
-			<h3>Inhabitants: <span id="population-tokyo">Loading...</span></h3>
-			<h3>Tourists: <span id="tourists-tokyo">Loading...</span></h3>
-			<h3>Apartments: <span id="apartments-tokyo">Loading...</span></h3>
-			<h3>Airbnb Index: <span id="airbnb-index-tokyo">Loading...</span></h3>
-		</div>
+		<h3><span id="population-tokyo">Loading...</span></h3>
+		<h3><span id="tourists-tokyo">Loading...</span></h3>
+		<h3><span id="apartments-tokyo">Loading...</span></h3>
+		<h3><span id="airbnb-index-tokyo">Loading...</span></h3>
 
 		<h1>
-			N° <span class="city-name">New York</span>:
+			N° <span class="city-name">New York</span>
 			<span id="total-ids-new-york">Loading...</span>
 		</h1>
-		<div class="city-info">
-			<h3>Inhabitants: <span id="population-new-york">Loading...</span></h3>
-			<h3>Tourists: <span id="tourists-new-york">Loading...</span></h3>
-			<h3>Apartments: <span id="apartments-new-york">Loading...</span></h3>
-			<h3>Airbnb Index: <span id="airbnb-index-new-york">Loading...</span></h3>
-		</div>
+		<h3><span id="population-new-york">Loading...</span></h3>
+		<h3><span id="tourists-new-york">Loading...</span></h3>
+		<h3><span id="apartments-new-york">Loading...</span></h3>
+		<h3><span id="airbnb-index-new-york">Loading...</span></h3>
 
 		<h1>
-			N° <span class="city-name">Rio De Janeiro</span>:
+			N° <span class="city-name">Rio De Janeiro</span>
 			<span id="total-ids-rio">Loading...</span>
 		</h1>
-		<div class="city-info">
-			<h3>Inhabitants: <span id="population-rio">Loading...</span></h3>
-			<h3>Tourists: <span id="tourists-rio">Loading...</span></h3>
-			<h3>Apartments: <span id="apartments-rio">Loading...</span></h3>
-			<h3>Airbnb Index: <span id="airbnb-index-rio">Loading...</span></h3>
-		</div>
+		<h3><span id="population-rio">Loading...</span></h3>
+		<h3><span id="tourists-rio">Loading...</span></h3>
+		<h3><span id="apartments-rio">Loading...</span></h3>
+		<h3><span id="airbnb-index-rio">Loading...</span></h3>
 
 		<h1>
-			N° <span class="city-name">Sydney</span>:
+			N° <span class="city-name">Sydney</span>
 			<span id="total-ids-sydney">Loading...</span>
 		</h1>
-		<div class="city-info">
-			<h3>Inhabitants: <span id="population-sydney">Loading...</span></h3>
-			<h3>Tourists: <span id="tourists-sydney">Loading...</span></h3>
-			<h3>Apartments: <span id="apartments-sydney">Loading...</span></h3>
-			<h3>Airbnb Index: <span id="airbnb-index-sydney">Loading...</span></h3>
-		</div>
+		<h3><span id="population-sydney">Loading...</span></h3>
+		<h3><span id="tourists-sydney">Loading...</span></h3>
+		<h3><span id="apartments-sydney">Loading...</span></h3>
+		<h3><span id="airbnb-index-sydney">Loading...</span></h3>
 
 		<h1>
-			N° <span class="city-name">Istanbul</span>:
+			N° <span class="city-name">Istanbul</span>
 			<span id="total-ids-istanbul">Loading...</span>
 		</h1>
-		<div class="city-info">
-			<h3>Inhabitants: <span id="population-istanbul">Loading...</span></h3>
-			<h3>Tourists: <span id="tourists-istanbul">Loading...</span></h3>
-			<h3>Apartments: <span id="apartments-istanbul">Loading...</span></h3>
-			<h3>Airbnb Index: <span id="airbnb-index-istanbul">Loading...</span></h3>
-		</div>
+		<h3><span id="population-istanbul">Loading...</span></h3>
+		<h3><span id="tourists-istanbul">Loading...</span></h3>
+		<h3><span id="apartments-istanbul">Loading...</span></h3>
+		<h3><span id="airbnb-index-istanbul">Loading...</span></h3>
 
 		<script type="module" src="js/script2.js"></script>
 	</body>
-	<style>
-		.city-info {
-			display: flex;
-			flex-direction: column;
-			gap: 5px;
-		}
-		h3 {
-			font-size: 1em;
-			margin: 0;
-		}
-	</style>
+</html>
