Refactor script.js and index2.html

--- a/index2.html
+++ b/index2.html
@@ -86,6 +86,6 @@
 		<h3><span id="apartments-istanbul">Loading...</span></h3>
 		<h3><span id="airbnb-index-istanbul">Loading...</span></h3>
 
-		<script type="module" src="js/script2.js"></script>
+		<script type="module" src="js/script.js"></script>
 	</body>
 </html>
