--- a/index.html
+++ b/index.html
@@ -4,6 +4,22 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>ShareBnB</title>
+		<link
+			href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap"
+			rel="stylesheet"
+		/>
+		<style>
+			body {
+				font-family: "Inter", sans-serif;
+			}
+			h1 {
+				font-weight: 700;
+			}
+			.city-name {
+				font-weight: bold;
+				text-transform: uppercase;
+			}
+		</style>
 		<link rel="stylesheet" href="css/styles.css" />
 	</head>
 	<body>
@@ -25,30 +41,156 @@
 					</label>
 					<label for="tab_2">
 						<div id="content" class="ny">NEW YORK CITY</div>
+						<div>
+							<h1>
+								N° <span class="city-name">New York</span>
+								<span id="total-ids-new-york">Loading...</span>
+							</h1>
+							<h3>
+								<span id="population-new-york">Loading...</span>
+							</h3>
+							<h3>
+								<span id="tourists-new-york">Loading...</span>
+							</h3>
+							<h3>
+								<span id="apartments-new-york">Loading...</span>
+							</h3>
+							<h3>
+								<span id="airbnb-index-new-york"
+									>Loading...</span
+								>
+							</h3>
+						</div>
 					</label>
 
 					<label for="tab_3">
 						<div id="content" class="rio">RIO DE JANEIRO</div>
+						<div>
+							<h1>
+								N° <span class="city-name">Rio de Janeiro</span>
+								<span id="total-ids-rio">Loading...</span>
+							</h1>
+							<h3><span id="population-rio">Loading...</span></h3>
+							<h3><span id="tourists-rio">Loading...</span></h3>
+							<h3><span id="apartments-rio">Loading...</span></h3>
+							<h3>
+								<span id="airbnb-index-rio">Loading...</span>
+							</h3>
+						</div>
 					</label>
 
 					<label for="tab_4">
 						<div id="content" class="cape">CAPE TOWN</div>
+						<div>
+							<h1>
+								N° <span class="city-name">Cape Town</span>
+								<span id="total-ids-cape-town">Loading...</span>
+							</h1>
+							<h3>
+								<span id="population-cape-town"
+									>Loading...</span
+								>
+							</h3>
+							<h3>
+								<span id="tourists-cape-town">Loading...</span>
+							</h3>
+							<h3>
+								<span id="apartments-cape-town"
+									>Loading...</span
+								>
+							</h3>
+							<h3>
+								<span id="airbnb-index-cape-town"
+									>Loading...</span
+								>
+							</h3>
+						</div>
 					</label>
 
 					<label for="tab_5">
 						<div id="content" class="sydney">SYDNEY</div>
+						<div>
+							<h1>
+								N° <span class="city-name">Sydney</span>
+								<span id="total-ids-sydney">Loading...</span>
+							</h1>
+							<h3>
+								<span id="population-sydney">Loading...</span>
+							</h3>
+							<h3>
+								<span id="tourists-sydney">Loading...</span>
+							</h3>
+							<h3>
+								<span id="apartments-sydney">Loading...</span>
+							</h3>
+							<h3>
+								<span id="airbnb-index-sydney">Loading...</span>
+							</h3>
+						</div>
 					</label>
 
 					<label for="tab_6">
 						<div id="content" class="tokio">TOKIO</div>
+						<div>
+							<h1>
+								N° <span class="city-name">Tokyo</span>
+								<span id="total-ids-tokyo">Loading...</span>
+							</h1>
+							<h3>
+								<span id="population-tokyo">Loading...</span>
+							</h3>
+							<h3><span id="tourists-tokyo">Loading...</span></h3>
+							<h3>
+								<span id="apartments-tokyo">Loading...</span>
+							</h3>
+							<h3>
+								<span id="airbnb-index-tokyo">Loading...</span>
+							</h3>
+						</div>
 					</label>
 
 					<label for="tab_7">
 						<div id="content" class="istanbul">ISTANBUL</div>
+						<div>
+							<h1>
+								N° <span class="city-name">Istanbul</span>
+								<span id="total-ids-istanbul">Loading...</span>
+							</h1>
+							<h3>
+								<span id="population-istanbul">Loading...</span>
+							</h3>
+							<h3>
+								<span id="tourists-istanbul">Loading...</span>
+							</h3>
+							<h3>
+								<span id="apartments-istanbul">Loading...</span>
+							</h3>
+							<h3>
+								<span id="airbnb-index-istanbul"
+									>Loading...</span
+								>
+							</h3>
+						</div>
 					</label>
 
 					<label for="tab_8">
 						<div id="content" class="paris">PARIS</div>
+						<div>
+							<h1>
+								N° <span class="city-name">Paris</span>
+								<span id="total-ids-paris">Loading...</span>
+							</h1>
+							<h3>
+								<span id="population-paris">Loading...</span>
+							</h3>
+							<h3><span id="tourists-paris">Loading...</span></h3>
+							<h3>
+								<span id="apartments-paris">Loading...</span>
+							</h3>
+							<h3>
+								<span id="airbnb-index-paris">Loading...</span>
+							</h3>
+						</div>
 					</label>
 				</div>
 			</section>
@@ -57,5 +199,6 @@
 		<footer>
 			<!-- 	<p>&copy; 2023 ShareBnB. All rights reserved.</p> -->
 		</footer>
+		<script type="module" src="js/script.js"></script>
 	</body>
 </html>
