Refactor CSS styles to update container layout and tab functionality

--- a/index.html
+++ b/index.html
@@ -23,13 +23,8 @@
 		<link rel="stylesheet" href="css/styles.css" />
 	</head>
 	<body>
-		<header>
-			<!-- <h1>Welcome to ShareBnB</h1> -->
-		</header>
 		<main>
 			<section>
-				<!--<h2>Featured Listings</h2> -->
-				<!-- Tabs Section -->
 				<div class="container">
 					<label for="tab_1">
 						<div id="content" class="sharebnb">ShareBnB</div>
@@ -41,7 +36,7 @@
 					</label>
 					<label for="tab_2">
 						<div id="content" class="ny">NEW YORK CITY</div>
-						<div>
+						<div class="tab-content">
 							<h1>
 								N° <span class="city-name">New York</span>
 								<span id="total-ids-new-york">Loading...</span>
@@ -65,7 +60,7 @@
 
 					<label for="tab_3">
 						<div id="content" class="rio">RIO DE JANEIRO</div>
-						<div>
+						<div class="tab-content">
 							<h1>
 								N° <span class="city-name">Rio de Janeiro</span>
 								<span id="total-ids-rio">Loading...</span>
@@ -81,7 +76,7 @@
 
 					<label for="tab_4">
 						<div id="content" class="cape">CAPE TOWN</div>
-						<div>
+						<div class="tab-content">
 							<h1>
 								N° <span class="city-name">Cape Town</span>
 								<span id="total-ids-cape-town">Loading...</span>
@@ -109,7 +104,7 @@
 
 					<label for="tab_5">
 						<div id="content" class="sydney">SYDNEY</div>
-						<div>
+						<div class="tab-content">
 							<h1>
 								N° <span class="city-name">Sydney</span>
 								<span id="total-ids-sydney">Loading...</span>
@@ -131,7 +126,7 @@
 
 					<label for="tab_6">
 						<div id="content" class="tokio">TOKIO</div>
-						<div>
+						<div class="tab-content">
 							<h1>
 								N° <span class="city-name">Tokyo</span>
 								<span id="total-ids-tokyo">Loading...</span>
@@ -151,7 +146,7 @@
 
 					<label for="tab_7">
 						<div id="content" class="istanbul">ISTANBUL</div>
-						<div>
+						<div class="tab-content">
 							<h1>
 								N° <span class="city-name">Istanbul</span>
 								<span id="total-ids-istanbul">Loading...</span>
@@ -175,7 +170,7 @@
 
 					<label for="tab_8">
 						<div id="content" class="paris">PARIS</div>
-						<div>
+						<div class="tab-content">
 							<h1>
 								N° <span class="city-name">Paris</span>
 								<span id="total-ids-paris">Loading...</span>
@@ -195,10 +190,6 @@
 				</div>
 			</section>
 		</main>
-
-		<footer>
-			<!-- 	<p>&copy; 2023 ShareBnB. All rights reserved.</p> -->
-		</footer>
 		<script type="module" src="js/script.js"></script>
 	</body>
 </html>
