Refactor CSS styles to update container layout and tab functionality

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
 				<div class="container">
 					<label for="tab_1">
 						<div id="content" class="sharebnb">ShareBnB</div>
+						<div class="tab-content">
+							<h1>moin</h1>				<!-- es wird angezeigt, aber leider ist es weiß, weil der "tab content" in der css weiß ist.  -->
+						</div>
 						<style>
 							.sharebnb {
 								color: black;
