--- a/index3.html
+++ b/index3.html
@@ -1,71 +1,78 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Airbnb Listings in Cape Town</title>
+    <title>Kapstadt Unterkünfte</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
     <style>
         #map {
-            height: 600px;
-            width: 100%;
-        }
-        body {
-            margin: 0;
-            padding: 0;
-            font-family: Arial, sans-serif;
-        }
-        /* Der Hintergrund der Karte soll transparent bleiben */
-        .leaflet-container {
-            background: transparent;
+            height: 100vh; /* Volle Höhe des Viewports */
         }
     </style>
 </head>
 <body>
-    <h1>Map of Cape Town with Airbnb Listings</h1>
+
     <div id="map"></div>
 
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
     <script>
-        // Initialisiere die Karte und setze den Mittelpunkt auf Kapstadt
-        const map = L.map('map', {
-            center: [-33.9249, 18.4241], // Koordinaten für Kapstadt
-            zoom: 12, // Start-Zoomstufe
-            zoomControl: false, // Deaktiviert die Zoom-Steuerung
-            dragging: false, // Deaktiviert das Ziehen (Panning)
-            scrollWheelZoom: false, // Deaktiviert Zoom durch das Mausrad
-            doubleClickZoom: false, // Deaktiviert das Zoomen durch Doppelklick
-            touchZoom: false, // Deaktiviert Touch-Zoom (z.B. Pinch-to-Zoom)
-            keyboard: false // Deaktiviert die Steuerung durch die Tastatur
+        // Initialisierung der Karte und Festlegung des Zentrums
+        var map = L.map('map', {
+            center: [-34.0, 18.5], // Zentrum auf Kapstadt
+            zoom: 10, // Startzoom
+            zoomControl: false, // Zoomsteuerung deaktivieren
+            scrollWheelZoom: false, // Scrollen deaktivieren
+            dragging: false, // Panning deaktivieren
+            boxZoom: false, // Box-Zoom deaktivieren
+            keyboard: false, // Tastatursteuerung deaktivieren
+            doubleClickZoom: false // Doppelklick-Zoom deaktivieren
         });
 
-        // Füge eine transparente Landmassen-Kachel-Schicht hinzu
-        L.tileLayer('https://{s}.basemaps.cartocdn.com/light_nolabels/{z}/{x}/{y}{r}.png', {
-            maxZoom: 18,
-            attribution: 'Map data © OpenStreetMap contributors, CartoDB',
-            opacity: 0.8, // Transparente Landmassen
+        // Hinzufügen einer benutzerdefinierten Kartenebene (weiße Landmasse)
+        L.tileLayer('https://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}{r}.png', {
+            maxZoom: 19,
+            attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors &copy; <a href="https://carto.com/attributions">CARTO</a>',
+            noWrap: true,
+            opacity: 1
         }).addTo(map);
 
-        // Funktion zum Laden der JSON-Daten
-        fetch('capetown.json')
+        // Lade die Daten aus der capetown2.json-Datei
+        fetch('capetown2.json')
             .then(response => response.json())
             .then(data => {
-                // Gehe durch alle Airbnb-Einträge und füge Marker hinzu
-                data.forEach(listing => {
-                    const lat = listing.coordinates.lat;
-                    const lon = listing.coordinates.lon;
-
-                    // Erstelle einen Marker für die jeweilige Koordinate
-                    L.circleMarker([lat, lon], {
-                        color: 'white',
-                        fillColor: '#ffffff',
-                        fillOpacity: 1,
-                        radius: 5
-                    }).addTo(map)
-                    .bindPopup(`<b>${listing.name}</b><br>Neighbourhood: ${listing.neighbourhood}`);
-                });
+                // Überprüfen, ob die Daten im erwarteten Format vorliegen
+                if (Array.isArray(data)) {
+                    data.forEach(function(location) {
+                        // Koordinaten extrahieren
+                        var coordinates = location.coordinates;
+                        // Rote Punkte als Marker hinzufügen
+                        L.circleMarker([coordinates.lat, coordinates.lon], {
+                            radius: 6, // Größe des Punktes
+                            fillColor: "#ff0000", // Rote Farbe
+                            color: "#ff0000", // Randfarbe
+                            weight: 1, // Randbreite
+                            opacity: 1, // Deckkraft des Randes
+                            fillOpacity: 1 // Deckkraft des Punktes
+                        })
+                        .addTo(map)
+                        .bindPopup(location.name);
+                    });
+                } else {
+                    console.error("Die JSON-Daten sind nicht im erwarteten Format.");
+                }
             })
-            .catch(error => console.error('Error loading the JSON file:', error));
+            .catch(error => {
+                console.error('Fehler beim Laden der JSON-Daten:', error);
+            });
+
+        // Transparentes Wasser durch die Verwendung von Leaflet-Plugin
+        L.rectangle([[ -34.5, 18.0], [-33.5, 19.0]], {
+            color: "#ffffff",
+            fillColor: "rgba(255, 255, 255, 0)", // Transparentes Wasser
+            weight: 1,
+            fillOpacity: 0
+        }).addTo(map);
     </script>
 </body>
 </html>
