Fix typo in index.html

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 								<span id="tourists-istanbul">Loading...</span>
 							</h3>
 							<h3>
-								<span id="apartments-istanbul">Loading...</span>
+								<spa1n id="apartments-istanbul">Loading...</spa1n>
 							</h3>
 							<h3>
 								<span id="airbnb-index-istanbul"
