Refactor CSS styles to update container layout, tab functionality, and arrow navigation

--- a/index.html
+++ b/index.html
@@ -58,6 +58,11 @@
 									>Loading...</span
 								>
 							</h3>
+							<div class="arrow-nav">
+								<button class="arrow" id="prev-2"><</button>
+								<div id="content-2" class="ny">NEW YORK 1</div>
+								<button class="arrow" id="next-2">></button>
+							</div>
 						</div>
 					</label>
 
@@ -74,6 +79,11 @@
 							<h3>
 								<span id="airbnb-index-rio">Loading...</span>
 							</h3>
+							<div class="arrow-nav">
+								<button class="arrow" id="prev-3"><</button>
+								<div id="content-3" class="ny">RIO 1</div>
+								<button class="arrow" id="next-3">></button>
+							</div>
 						</div>
 					</label>
 
@@ -102,6 +112,11 @@
 									>Loading...</span
 								>
 							</h3>
+							<div class="arrow-nav">
+								<button class="arrow" id="prev-4"><</button>
+								<div id="content-4" class="ny">CAPE TOWN 1</div>
+								<button class="arrow" id="next-4">></button>
+							</div>
 						</div>
 					</label>
 
