Refactor CSS styles to update container layout, tab functionality, and arrow navigation

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 					<label for="tab_1">
 						<div id="content" class="sharebnb">ShareBnB</div>
 						<div class="tab-content">
-							<h1>moin</h1>				<!-- es wird angezeigt, aber leider ist es weiß, weil der "tab content" in der css weiß ist.  -->
+							<h1>moin</h1>
+							<!-- es wird angezeigt, aber leider ist es weiß, weil der "tab content" in der css weiß ist.  -->
 						</div>
 						<style>
 							.sharebnb {
@@ -176,7 +177,9 @@
 								<span id="tourists-istanbul">Loading...</span>
 							</h3>
 							<h3>
-								<spa1n id="apartments-istanbul">Loading...</spa1n>
+								<spa1n id="apartments-istanbul"
+									>Loading...</spa1n
+								>
 							</h3>
 							<h3>
 								<span id="airbnb-index-istanbul"
