--- a/index.html
+++ b/index.html
@@ -112,7 +112,69 @@
 								<span id="airbnb-index-cape-town"
 									>Loading...</span
 								>
-							</h3>
+							<div id="map"></div>
+							<script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
+							<style>
+								#map {
+									width: 120%; /* Make the map fill more than the entire width */
+									height: 200px; /* Increase the height of the map */
+									margin-left: -200%; /* Move the map 120% to the left */
+								}
+							</style>
+							<script>
+								// Initialize the map and set the center to Cape Town
+								const map = L.map("map", {
+									center: [-33.9249, 18.4241], // Coordinates for Cape Town
+									zoom: 10, // Initial zoom level
+									zoomControl: false, // Disables zoom control
+									dragging: false, // Disables dragging (panning)
+									scrollWheelZoom: true, // Enables zoom via scroll wheel
+									doubleClickZoom: false, // Disables zoom via double-click
+									touchZoom: false, // Disables touch zoom (e.g., pinch-to-zoom)
+									keyboard: false, // Disables keyboard control
+								});
+
+								// Add a transparent landmass tile layer
+								L.tileLayer(
+									"https://{s}.basemaps.cartocdn.com/light_nolabels/{z}/{x}/{y}{r}.png",
+									{
+										maxZoom: 18,
+										attribution:
+											"Map data © OpenStreetMap contributors, CartoDB",
+										opacity: 0.8, // Transparent landmasses
+									}
+								).addTo(map);
+
+								// Function to load JSON data
+								fetch("capetown.json")
+									.then((response) => response.json())
+									.then((data) => {
+										// Iterate through all Airbnb listings and add markers
+										data.forEach((listing) => {
+											const lat = listing.coordinates.lat;
+											const lon = listing.coordinates.lon;
+
+											// Create a marker for each coordinate
+											L.circleMarker([lat, lon], {
+												color: "white",
+												fillColor: "#ffffff",
+												fillOpacity: 1,
+												radius: 5,
+											})
+												.addTo(map)
+												.bindPopup(
+													`<b>${listing.name}</b><br>Neighbourhood: ${listing.neighbourhood}`
+												);
+										});
+									})
+									.catch((error) =>
+										console.error(
+											"Error loading the JSON file:",
+											error
+										)
+									);
+							</script>
+
 							<div class="arrow-nav">
 								<button class="arrow" id="prev-4"><</button>
 								<div id="content-4" class="ny">CAPE TOWN 1</div>
