Refactor CSS styles to update tab colors and hover effects

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 						</div>
 						<style>
 							.sharebnb {
-								color: black;
+								color: rgb(255, 255, 255);
 							}
 						</style>
 					</label>
